--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ targetCompatibility = 1.5
 
 group = 'info.boaventura'
 archivesBaseName = 'gradle-build-maven-credentials'
-version = '1.0.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
     mavenLocal()
